# ImageLabelIA

./: .actrc  .dockerignore  .env.example  .gitignore  .npmrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.build  README.md  SECURITY.md  angular.json  docker-build.sh  download_model.py  export_convnext.py  export_labels.py  export_onnx.py  package.json  pnpm-lock.yaml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
src/: index.html  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tagger.rs
src/app/: app.component.css  app.component.html  app.component.ts  models.ts
src/app/components/batch-config-modal/: batch-config-modal.component.html  batch-config-modal.component.ts
src/app/components/batch-report-modal/: batch-report-modal.component.ts
src/app/components/folder-tree/: folder-tree.component.ts
src/app/components/image-details/: image-details.component.html  image-details.component.ts
src/app/components/image-gallery/: image-gallery.component.html  image-gallery.component.ts  lazy-thumb.directive.ts
src/app/services/: batch.service.ts  tagger.service.ts
